css/klavrekod.scss
---
---
/* -*-css-mode-*- */

img.top-logo {
    border-width: 0px;
    width: 100%;
    max-width: 45rem;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

div.post-content {
    img {
        max-width: 100%;
        height: auto;
        display: block;
    }
}

div.semicolon-footer {
    padding-top: 40px;
    padding-bottom: 40px;

    img {
        width: auto;
        height: 40px;
    }
}

table.license {
    border-width: 0px;

    td {
        vertical-align: middle;
    }
    
    td.license-image {
        padding-right: 5px;
    }

    img {
        border-width: 0px;
    }

    p {
        margin-bottom: 0px;
    }
}

